# energy_scraper

./: .env  .env_ex  .gitignore  Dockerfile  README.md  main.py  nas.py  pyproject.toml  slack.py
src/energy_scraper/: logger.py  metadata.py  nas.py  slack.py
