[project]
name = "energy-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Hiksang",email = "goo9801@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "dotenv (>=0.9.9,<0.10.0)",
    "slack-sdk (>=3.35.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "energy_scraper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
